# syncpss

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.sh  manifest.xml  master_fingerprint.sha256
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: pr-checks.yml
cmake/toolchains/: linux-cross-gcc.cmake
config/: ruleset_main.json  signing_policy.json  syncpss.conf.example
docs/: PENDING.md  QA.md  README.md  architecture.md  build-and-release.md  installer-flow.md  installer-style-and-flow.md  runtime-config-and-store.md
docs/ideas/: FILESHARING.md  IDEAS.md
docs/internals/: ARCHITECTURE.md  BUILD-AND-RELEASE.md  INSTALLER-FLOW.md  RUNTIME-CONFIG-AND-STORE.md
scripts/: build.bat  cd.bat  ci.bat  purge.bat  run_tests.bat  set_fingerprint.bat  set_icon.bat  update_icon.bat
scripts/one-time/: fix_local_keys_container.sh  fix_master_fingerprint.sh  run_container_fix.bat
scripts/ps1/: build.ps1  ci.ps1  ensure_maintainer_id.ps1  generate_windows_icon.ps1  maintainer_id.ps1  purge.ps1  release.ps1  run_container_fix.ps1  set_fingerprint.ps1  set_icon.ps1  update_master_fingerprint.ps1
scripts/sh/: build.sh  installer.sh  maintainer_id.sh  managed_paths.sh  release.sh  set_fingerprint.sh  uninstall_syncpss.sh
src/: main.cpp
src/crypto/: gpg.cpp  gpg.hpp  veracrypt.cpp  veracrypt.hpp
src/git/: conflict.hpp  git.cpp  git.hpp
src/installer/linux/: main_installer.cpp
src/installer/win/: assets.cpp  common.hpp  console.cpp  distro.cpp  installer.manifest  installer.rc  main.cpp  process.cpp  shortcuts.cpp  system_paths.cpp  wsl_stage.cpp
src/ssh/: known_hosts.hpp  ssh.cpp  ssh.hpp
src/store/: entry.hpp  store.cpp  store.hpp
src/tui/: colors.hpp  password_actions.cpp  password_browser.cpp  password_helpers.cpp  tui.hpp  tui_backup_container.cpp  tui_configuration.cpp  tui_core.cpp  tui_gpg_keys.cpp  tui_main_menu.cpp  tui_remote_keys.cpp  tui_setup_wizard.cpp  tui_sync.cpp  tui_ui.cpp  tui_update.cpp
src/tui/detail/: backup_manifest.cpp  browser.cpp  browser.hpp  common.cpp  common.hpp  fingerprint.cpp  gnupg.cpp  passwords.hpp  release.cpp  release.hpp  render.cpp  render.hpp
src/util/: clipboard.hpp  clipboard_core.cpp  clipboard_internal.hpp  clipboard_lease.cpp  clipboard_wsl_windows.cpp  config.cpp  config.hpp  entry_metadata.cpp  entry_metadata.hpp  paths.cpp  paths.hpp  process.cpp  process.hpp  runtime_config.cpp  runtime_config.hpp  validation.cpp  validation.hpp
tests/: maintainer_bootstrap.ps1  release_identity_manager.ps1  release_signing_policy.ps1  run.py  validation_smoke.cpp
tests/framework/: __init__.py  runner.py
tests/installer_qa/: run.sh
